CHANGES IN VERSION 2.5.1
------------------------
 o simplify function <2015-10-21, Wed>
   + see https://github.com/GuangchuangYu/clusterProfiler/issues/28

CHANGES IN VERSION 2.5.0
------------------------
 o BioC 3.3 branch
 
CHANGES IN VERSION 2.3.8
------------------------
 o dropGO function <2015-09-24, Thu>
   + see https://github.com/GuangchuangYu/clusterProfiler/issues/26
 o use_internal_data = TRUE in enrichKEGG example to speedup compilation of vignette and prevent error when online is not available <2015-09-23, Wed>
 
CHANGES IN VERSION 2.3.7
------------------------
 o bug fixed in sorting pvalue of compareClusterResult. <2015-09-16, Wed>
   For compareCluster(fun=groupGO), there is no pvalue, use Count for sorting
 o use_internal_data= TRUE in enrichKEGG and gseKEGG demonstrated in vignette due to the issue
   https://github.com/GuangchuangYu/clusterProfiler/issues/20 <2015-08-26, Wed>		   
 
CHANGES IN VERSION 2.3.6
------------------------
 o merge_result function <2015-07-15, Wed>
 o add citation of ChIPseeker <2015-07-09, Thu>
 o add 'Functional analysis of NGS data' section in vignette <2015-06-29, Mon>
 o update vignette <2015-06-24, Wed>
 
CHANGES IN VERSION 2.3.5
------------------------
 o import dotplot from DOSE <2015-06-21, Sun>

CHANGES IN VERSION 2.3.4
------------------------
 o bug fixed in getGeneSet.GO <2015-06-16, Tue>
 
CHANGES IN VERSION 2.3.3
------------------------
 o convert vignette from Rnw to Rmd format <2015-05-17, Sun>
 
CHANGES IN VERSION 2.3.2
------------------------
 o bug fixed of build_Anno <2015-05-07, Thu>
 o add plotGOgraph function <2015-05-05, Tue>
 
CHANGES IN VERSION 2.3.1
------------------------
 o remove import RDAVIDWebService <2015-04-29, Wed>
 o update buildGOmap <2015-04-29, Wed>
 o remove import KEGG.db <2015-04-29, Wed>
 
CHANGES IN VERSION 2.1.14
------------------------
 o [enrichDAVID] report NA in qvalue column when it fail to calculate instead of throw error <2015-03-10, Fri>
 