@@ -35,6 +35,7 @@ export(enrichGO)
 export(enrichKEGG)
 export(enrichMap)
 export(enricher)
+export(gofilter)
 export(groupGO)
 export(gseGO)
 export(gseKEGG)
